--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^4.0.3",
     "vue3-google-login": "^2.0.33",
     "vuex": "^4.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
